Fixed button animation not working in firefox. Fixed navigation text not being aligned with it's container. Added dynamic results page title based on chosen category.

--- a/app/scss/_animations.scss
+++ b/app/scss/_animations.scss
@@ -289,9 +289,11 @@ $scale2: 1.07;
 
 .toggleButtonDown {
 	-webkit-animation-name: toggleButtonDown;
+	-moz-animation-name: toggleButtonDown;
 	animation-name: toggleButtonDown;
 
 	animation-duration: 0.35s;	
+	-moz-animation-duration: 0.25s;
 	-webkit-animation-duration: 0.25s;
 
 	animation-timing-function: ease-in-out;	
@@ -352,9 +354,11 @@ $scale2: 1.07;
 .toggleButtonUp {
 	-webkit-animation-name: toggleButtonUp;
 	animation-name: toggleButtonUp;
+	-moz-animation-name: toggleButtonUp;
 
 	animation-duration: 0.35s;	
 	-webkit-animation-duration: 0.25s;
+	-moz-animation-duration: 0.25s;
 
 	animation-timing-function: ease-in-out;	
 	-webkit-animation-timing-function: ease-in-out;	
