--- a/app/scss/structure/_results.scss
+++ b/app/scss/structure/_results.scss
@@ -10,8 +10,6 @@
 			// float: left;
 		}
 		.results-adjust-desc {
-			// display: inline-block;
-			margin-left: 10px;
 			text-align: center;
 			text-transform: uppercase;
 			position: relative;
